--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -3,22 +3,78 @@
 #
 # WebDriver configuration
 #
+# webdriver {
+#   driver = chrome
+#   autodownload = true
+# }
+#
+#
+# serenity {
+#   test.root = starter
+#   compress.filenames = false
+# //  take.screenshots = FOR_FAILURES
+# }
+#
+# #
+# # Chrome options can be defined using the chrome.switches property
+# #
+# chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
+#                    --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
+#                    --incognito;--disable-infobars,--disable-gpu"""
+
+
+#### Use below for running in BS
+# browserstack.user=
+# browserstack.key=
+#
+# webdriver {
+#   driver = remote
+#   remote.url =
+#   "https://BS_user:BS_accesskey@hub.browserstack.com/wd/hub"
+# }
+#
+# browserstack {
+#   active = true
+#   }
+#
+#     webdriver {
+#       driver = "remote"
+#       capabilities {
+#         browserName = "Chrome"
+#         browserVersion = "latest"
+#         "bstack:options" {
+#           os = "Windows"
+#           osVersion = "11"
+#           resolution = "1920x1200"
+#           seleniumVersion = "4.1.2"
+#           video = true
+#         }
+#       }
+#     }
+
+## for Lambdatest
+
 webdriver {
-  driver = chrome
-  autodownload = true
-}
-headless.mode = true
-
-serenity {
-  test.root = starter
-  compress.filenames = false
-//  take.screenshots = FOR_FAILURES
+  driver = remote
+  remote.url = "https://user:key@hub.lambdatest.com/wd/hub"
 }
 
-#
-# Chrome options can be defined using the chrome.switches property
-#
-chrome.switches = """--start-maximized;--test-type;--no-sandbox;--ignore-certificate-errors;
-                   --disable-popup-blocking;--disable-default-apps;--disable-extensions-file-access-check;
-                   --incognito;--disable-infobars,--disable-gpu"""
+lambdatest {
+  active = true
+}
 
+    webdriver {
+      driver = "remote"
+      capabilities {
+        browserName = "chrome"
+        version = "104.0"
+        platform = "Windows 10"
+
+        "LT:Options" {
+          network = true // To enable network logs
+          visual = true // To enable step by step screenshot
+          video = true // To enable video recording
+          console = true // To capture console logs
+        }
+      }
+    }
